# skip-bo

./: .gitignore  .prettierrc  Cargo.toml  bun.lockb  package.json
client-backend/: Cargo.toml  build.rs  tauri.conf.json
client-backend/schemas/: sb.graphql
client-backend/src/: lib.rs  main.rs
client-backend/src/graphql/: create_draft_game.rs  list_draft_games.rs  mod.rs
client-frontend/: README.md  bun.lockb  package.json  tsconfig.json  webpack.config.js
client-frontend/src/: index.tsx
client-frontend/src/app/: app.component.tsx  layout.component.tsx  router.tsx
client-frontend/src/assets/html/: index.html
client-frontend/src/libs/create-game/: create-game-form.component.tsx  create-game.component.tsx  create-game.provider.tsx  draft-game.provider.tsx  index.tsx
client-frontend/src/libs/landing/: landing.component.tsx  landing.provider.tsx  routes.tsx
client-frontend/src/libs/ui/form/: form.component.tsx  index.ts
client-frontend/src/libs/ui/form/fields/: checkbox-input.component.tsx  index.ts  text-input.component.tsx
server/: Cargo.toml
server/src/: card.rs  game.rs  main.rs  player.rs  turn_info.rs
server/src/database/: mod.rs  mongodb_keys.rs
server/src/game_models/: draft_game.rs  draft_player.rs  mod.rs
server/src/models/: identifier.rs  mod.rs
server/src/models/database/: draft_game.rs  draft_player.rs  mod.rs
server/src/models/graphql/: client_draft_game.rs  mod.rs
server/src/schema/: database.rs  mod.rs  mutation.rs  query.rs
server/src/schema/mutation/: draft_mutation.rs  mod.rs
